# kawaii_voice_changer

./: .gitignore  README.md  config.template.py  docker-compose.cpu.yml  docker-compose.gpu.yml  main.py  pyproject.toml  record_audio.py  requirements.txt  speak_text.py  toggle.py  transcribe_audio.py  translate_text.py
voicevox_client/: client.py  voice_config.py
